# boilerdata

./: .all-contributorsrc  .codecov.yml  .copier-answers.yml  .coveragerc  .env  .flake8  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .renovaterc.json  .sourcery.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  Send-Key.ps1  constraints.txt  data.dvc  dvc.yaml  dvc_.yaml  dvc_repro.ps1  experiments.dvc  frozen_requirements.txt  lock.json  modelfun.ipynb  package.json  parameters.yaml  params.yaml  params_schema.json  pest.ipynb  pipeline.py  pyproject.toml  pyrightconfig.json  pytest.ini  pythonrc.py  renovate.json  repro.txt  (+8 more)
.devcontainer/: devcontainer.json
.dvc/: config
.github/: SECURITY.md  issue_template.md  pull_request_template.md
.github/DISCUSSION_TEMPLATE/: general.yaml  ideas-for-docs.yaml  ideas-for-infrastructure.yaml  ideas.yaml  internal.yaml  q-a.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  config.yml  internal.yaml
.github/workflows/: bump.yml  changerelease.yml  ci.yml  codeql-analysis.yml  contrib.yml  high.yml  main.yml  minimum.yml  publish.yml  release.yml  sphinx.yml
.tooling/: cicd_setup.sh  setup.ps1  update.ps1
.tools/: pyproject.toml
.tools/requirements/: .gitignore  requirements.txt  requirements_both.txt  requirements_ci.txt  requirements_dev.txt  requirements_docs.txt  requirements_project.txt
.tools/scripts/: Set-SymlinkPropshop.ps1  cicd_setup.sh  pythonstartup.py
.tools/setup/: setup.ps1
changelog/: +d15bae.change.md  towncrier_template.md.jinja
config/: axes.yaml  axes_schema.json  project.yaml  trials.yaml  trials_schema.json
config/plotting/: base.mplstyle
data/: .gitignore  benchmarks.dvc  curves.dvc  literature.dvc  literature_results.dvc  manual.dvc  model.dillpickle.dvc  plotter.dvc  results.dvc  schema_old.dvc
data/config/: axes_schema.json  trials.yaml  trials_schema.json
data/model/: model.dillpickle
data/models/: .gitignore  modelfun-3.11.dillpickle.dvc  modelfun-3.12.dillpickle.dvc
docs/: conf.py  contributing.md  dag.md  docs.py  index.md  pyproject.toml  requirements.txt
docs/_static/: dag.dot
docs/boilerdata_docs/: docstrings.py  intersphinx.py
examples/: boilerdata.toml  config.yaml  enum_override_getter.py  notebook.ipynb  parameters.yaml  pipeline.py  tweak_lookup_tables.ipynb
examples/enums/: dump_schema.py  dump_to_schema.py  override_auto.py  override_both.py  override_getter.py  roundtrip.py  test.toml  test_out.toml  test_schema.json
examples/example/: boilerdata.toml.json  fitted.csv
experiments/: regress_actual_versus_mean.py
experiments/22-09-08-repeat/: pipeline.ipynb  pipeline.py
experiments/22-09-12-bake-rtv/: pipeline.ipynb
experiments/22-09-14-rtv/: pipeline.ipynb
modelfun/: model-new.dillpickle
notebooks/: compare_fits.ipynb
project/: axes.py  columns.py  conftest.py  constants.py  df_schema.py  enums.py  migrate.py  models.py  originlab.py  pipeline.py  test_migrate.py  test_pipeline.py  test_project.py  try_00_act_vs_est.py  update_schema.py  utils.py  validation.py
project/config/: axes.yaml  columns.py  columns.yaml  config.toml  config_old.yaml  old.toml  project.toml  project.yaml  trials.toml  trials.yaml  (+3 more)
requirements/: dev.in  install.txt  override.txt  requirements.txt  uv.in  uv.txt
schema/: Trials_schema.json  axes_schema.json  boilerdata.toml.json  config_schema.json  project_schema.json  trials.toml  trials_schema.json
scripts/: Initialize-Repo.ps1  Initialize-Shell.ps1  Sync-Py.ps1  lookups.ipynb  lookups.py  parameters.yaml  pdfittings.py  pipeline.py  pyproject.toml
scripts/EES/: .gitignore  EES.ps1  get_thermal_conductivity.ees  h.EES  k.EES
scripts/boilerdata_tools/: __main__.py  add_changes.py  sync.py
tests/: __init__.py  conftest.py  pyproject.toml  test_boilerdata.py  test_cli.py  test_common.py  test_configs.py  test_pipeline.py  test_utils.py
tests/.propshop/tables/: COPPER.feather
tests/boilerdata_tests/: __init__.py  conftest.py  test_boilerdata.py  test_modelfun.py
tests/boilerdata_tests/modelfun/: __init__.py  conftest.py  test_modelfun.py
tests/data/: boilerdata.toml  boilerdata.toml.json  fitted_correct.csv
tests/data/config/: axes.yaml
tests/data/data/modelfun/: model.dillpickle
tests/data/data/runs/: runs.csv
tests/data/literature/paper/fig/: fig.toml
tests/data/literature_results/: lit.csv
tests/data/raw/: results_2022-04-08T11-31-47.csv  results_2022-04-08T13-57-37.csv  results_2022-04-08T16-12-42.csv
tests/data/results/: results.csv
tests/data/schema/: axes_schema.json
tests/root/: params.yaml
tests/root/data/: model.dillpickle
tests/root/data/axes/: axes_enum.py
tests/root/data/benchmarks_parsed/: benchmarks_parsed.csv
tests/root/data/config/: axes.yaml  trials.yaml
tests/root/data/curves/2022-09-14/: results_2022-09-14T10-21-00.csv  results_2022-09-14T11-18-21.csv  results_2022-09-14T11-51-38.csv  results_2022-09-14T13-05-35.csv  results_2022-09-14T14-52-59.csv
tests/root/data/modelfun/: model.dillpickle
tests/root/data/models/: modelfun-3.11.dillpickle  modelfun-3.12.dillpickle
tests/root/data/runs/: runs.csv
tests/root/data/schema/: project_schema.json
tests/root/data/tables/: pipeline_metrics.json
tests/test_root/: generate.py
tests/test_root/config/: trials.yaml
tests/test_root/data/axes/: axes_enum.py  originlab_coldes.txt
tests/test_root/data/benchmarks/: benchmark_2022-11-21T14-11-11.csv  benchmark_2022-12-01T13-15-43.csv
tests/test_root/data/curves/2022-09-14/: results_2022-09-14T10-54-01.csv  results_2022-09-14T12-09-46.csv  results_2022-09-14T13-20-54.csv  results_2022-09-14T14-14-11.csv  results_2022-09-14T14-29-59.csv  results_2022-09-14T15-17-21.csv
tests/test_root/data/modelfun/: model.dillpickle
tests/test_root/data/schema/: trials_schema.json
tests/tmp_path/data/literature/paper/: paper.toml
tests/tmp_path/data/literature/paper/fig/: wpd_project.json
tests/tmp_path/data/propshop/tables/: COPPER.feather
tooling/: cicd_setup.sh  setup.ps1  update.ps1
(+108 files in other folders)
