[build-system]
requires = [ "flit_core >=3.3,<4",]
build-backend = "flit_core.buildapi"

[project]
name = "boilerdata"
version = "0.0.0"
description = "Data processing pipeline for a nucleate pool boiling apparatus."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [ "License :: OSI Approved :: MIT License",]
dependencies = [ "dill>=0.3.6", "dvc[gs]>=3.5.1", "IPython[notebook]>=8.14.0", "matplotlib>=3.7.2", "numpy>=1.25.1", "pandas>=2.0.3", "pandera>=0.16.1", "papermill>=2.4.0", "propshop>=0.1.1", "pyarrow>=12.0.1", "pydantic>=1.10.11", "pyjanitor>=0.24.0", "pyXSteam>=0.4.9", "pyyaml>=6.0", "ruamel.yaml>=0.17.32", "scipy>=1.11.1", "seaborn>=0.12.2", "sympy>=1.12", "uncertainties>=3.1.7", "jupyter-client>=7.4.9",]
[[project.authors]]
name = "Blake Naccarato, Kwang Jin Kim"
email = "blake.naccarato@gmail.com"

[project.license]
file = "LICENSE"

[project.urls]
Changes = "https://blakeNaccarato.github.io/boilerdata/changelog.html"
Docs = "https://blakeNaccarato.github.io/boilerdata"
Home = "https://github.com/blakeNaccarato/boilerdata"
Tracker = "https://github.com/blakeNaccarato/boilerdata/issues"

[tool.ruff]
fix = true
select = [ "ALL",]
src = [ "src", "tests",]
target-version = "py311"
extend-exclude = [ "template", "typings", ".github", ".tools", ".venv",]
ignore = [ "ANN", "ARG005", "C408", "COM", "D10", "D20", "D213", "D402", "DTZ", "E501", "EM", "ERA", "FBT", "F841", "G0", "INP001", "ISC", "PD013", "PD901", "PD011", "PGH003", "PIE804", "PLR0913", "PLR2004", "PLW2901", "RET", "S301", "TCH", "TD", "TRY003", "W2", "B018", "F821", "S101", "T201",]
unfixable = [ "F601",]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.isort]
split-on-trailing-comma = false

[tool.ruff.per-file-ignores]
"docs/**" = [ "E402",]
"tests/**" = [ "ARG001", "S101",]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [ "typer.Argument", "typer.Option",]

[tool.ruff.pep8-naming]
classmethod-decorators = [ "pydantic.validator",]
