[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "boilerdata_docs"
version = "0.0.0"
description = "Docs."
dependencies = [
    # ? Core docs
    "docutils==0.21.2",
    "graphviz==0.20.3",
    "linkify-it-py==2.0.3",
    "myst-nb==1.1.2",
    "myst-parser==4.0.0",
    "numpydoc==1.8.0",
    "ruamel-yaml==0.18.6",
    "sphinx-autobuild==2024.10.3",
    "sphinx-autodoc2==0.5.0",
    "sphinx-book-theme==1.1.3",
    "sphinx-design==0.6.1",
    "sphinx-thebe==0.3.1",
    "sphinx-tippy==0.4.3",
    "sphinx-togglebutton==0.3.2",
    "sphinx==8.1.3",
    "sphinxcontrib-bibtex==2.6.3",
    "sphinxcontrib-mermaid==1.0.0",
    "sphinxcontrib-towncrier==0.4.0a0",
    # ? https://nvd.nist.gov/vuln/detail/CVE-2024-37891
    # ? via sphinx
    "urllib3>=2.2.2",
]

[tool.fawltydeps]
deps = ["docs/pyproject.toml"]
code = ["docs"]
ignore_undeclared = [
    "boilerdata_docs",
    "boilerdata_tests",
    "boilerdata_tools",
    "boilerdata",
]
ignore_unused = [
    # ? Core docs tools or declared as extensions in `conf.py`
    "linkify-it-py",
    "myst-nb",
    "myst-parser",
    "sphinx-autobuild",
    "sphinx-autodoc2",
    "sphinx-book-theme",
    "sphinx-design",
    "sphinx-thebe",
    "sphinx-tippy",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-towncrier",
    # ? https://nvd.nist.gov/vuln/detail/CVE-2024-37891
    # ? via sphinx
    "urllib3",
]
[tool.fawltydeps.custom_mapping]
ruamel-yaml = ["ruamel"]
