[build-system]
requires = ["flit_core==3.9.0"]
build-backend = "flit_core.buildapi"

[project]
name = "boilerdata_tests"
version = "0.0.0"
description = "Tests."
dependencies = [
    # ? Core testing
    "pytest-cov==4.1.0",
    "pytest-custom-exit-code==0.3.0",
    "pytest-github-actions-annotate-failures==0.2.0",
    "pytest==8.0.0",
    # ? Other testing
    "ploomber-engine>=0.0.30",
    # ? Other deps
    "cachier @ git+https://github.com/blakeNaccarato/cachier@0892f53dc8fd9fb8a7f959305a1a9ec692876dc0", # Allows `dill` caching
]

[tool.fawltydeps]
deps = ["tests/pyproject.toml"]
code = ["tests/boilerdata_tests"]
ignore_undeclared = [
    "boilercore",
    "boilerdata_docs",
    "boilerdata_tests",
    "boilerdata_tools",
    "boilerdata",
]
ignore_unused = [
    # ? Core testing tools or plugins
    "pytest-cov",
    "pytest-custom-exit-code",
    "pytest-github-actions-annotate-failures",
    "pytest",
]
